docs: clarify GitHub Pages cache; fix remaining prefixed links

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -50,52 +50,52 @@ import "../styles/global.css";
                         tabindex="0"
                         class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
                     >
-                        <li><a href="/harney-digital-wellness/quick-start">Quick Start</a></li>
-                        <li><a href="/harney-digital-wellness/screen-time">Screen Time</a></li>
-                        <li><a href="/harney-digital-wellness/online-safety">Online Safety</a></li>
-                        <li><a href="/harney-digital-wellness/mindful-breaks">Mindful Breaks</a></li>
-                        <li><a href="/harney-digital-wellness/survey">Survey</a></li>
-                        <li><a href="/harney-digital-wellness/resources">Resources</a></li>
+                        <li><a href="/quick-start/">Quick Start</a></li>
+                        <li><a href="/screen-time/">Screen Time</a></li>
+                        <li><a href="/online-safety/">Online Safety</a></li>
+                        <li><a href="/mindful-breaks/">Mindful Breaks</a></li>
+                        <li><a href="/survey/">Survey</a></li>
+                        <li><a href="/resources/">Resources</a></li>
                     </ul>
                 </div>
-                <a href="/harney-digital-wellness/" class="btn btn-ghost text-xl font-bold text-primary"
+                <a href="/" class="btn btn-ghost text-xl font-bold text-primary"
                     >Harney Digital Wellness</a
                 >
             </div>
             <div class="navbar-center hidden lg:flex">
                 <ul class="menu menu-horizontal px-1">
                     <li>
-                        <a href="/harney-digital-wellness/quick-start" class="hover:text-primary"
+                        <a href="/quick-start/" class="hover:text-primary"
                             >Quick Start</a
                         >
                     </li>
                     <li>
-                        <a href="/harney-digital-wellness/screen-time" class="hover:text-primary"
+                        <a href="/screen-time/" class="hover:text-primary"
                             >Screen Time</a
                         >
                     </li>
                     <li>
-                        <a href="/harney-digital-wellness/online-safety" class="hover:text-primary"
+                        <a href="/online-safety/" class="hover:text-primary"
                             >Online Safety</a
                         >
                     </li>
                     <li>
-                        <a href="/harney-digital-wellness/mindful-breaks" class="hover:text-primary"
+                        <a href="/mindful-breaks/" class="hover:text-primary"
                             >Mindful Breaks</a
                         >
                     </li>
                     <li>
-                        <a href="/harney-digital-wellness/survey" class="hover:text-primary">Survey</a>
+                        <a href="/survey/" class="hover:text-primary">Survey</a>
                     </li>
                     <li>
-                        <a href="/harney-digital-wellness/resources" class="hover:text-primary"
+                        <a href="/resources/" class="hover:text-primary"
                             >Resources</a
                         >
                     </li>
                 </ul>
             </div>
             <div class="navbar-end">
-                <a href="/harney-digital-wellness/get-help" class="btn btn-accent btn-sm"
+                <a href="/get-help/" class="btn btn-accent btn-sm"
                     >Get Help Now</a
                 >
             </div>
@@ -142,23 +142,23 @@ import "../styles/global.css";
                         <div class="flex flex-col space-y-2">
                             <a
                                 class="link link-hover text-sm"
-                                href="/harney-digital-wellness/quick-start">Quick Start Guides</a
+                                href="/quick-start/">Quick Start Guides</a
                             >
                             <a
                                 class="link link-hover text-sm"
-                                href="/harney-digital-wellness/screen-time">Screen Time Tools</a
+                                href="/screen-time/">Screen Time Tools</a
                             >
                             <a
                                 class="link link-hover text-sm"
-                                href="/harney-digital-wellness/online-safety">Online Safety</a
+                                href="/online-safety/">Online Safety</a
                             >
                             <a
                                 class="link link-hover text-sm"
-                                href="/harney-digital-wellness/mindful-breaks">Mindful Breaks</a
+                                href="/mindful-breaks/">Mindful Breaks</a
                             >
                             <a
                                 class="link link-hover text-sm"
-                                href="/harney-digital-wellness/sources">Sources &amp; Further Reading</a
+                                href="/sources/">Sources &amp; Further Reading</a
                             >
                         </div>
                     </div>
@@ -169,17 +169,17 @@ import "../styles/global.css";
                             Support
                         </h6>
                         <div class="flex flex-col space-y-2">
-                            <a class="link link-hover text-sm" href="/harney-digital-wellness/get-help"
+                            <a class="link link-hover text-sm" href="/get-help/"
                                 >Local Resources</a
                             >
                             <a
                                 class="link link-hover text-sm"
-                                href="/harney-digital-wellness/get-help#crisis">Crisis Support</a
+                                href="/get-help#crisis">Crisis Support</a
                             >
-                            <a class="link link-hover text-sm" href="/harney-digital-wellness/survey"
+                            <a class="link link-hover text-sm" href="/survey/"
                                 >Parent Survey</a
                             >
-                            <a class="link link-hover text-sm" href="/harney-digital-wellness/resources"
+                            <a class="link link-hover text-sm" href="/resources/"
                                 >All Resources</a
                             >
                         </div>
