--- a/src/lib/citations/Cite.astro
+++ b/src/lib/citations/Cite.astro
@@ -5,7 +5,7 @@ const num = getCitationNumber(id);
 ---
 {num ? (
   <sup class="ml-1">
-    <a href={`/harney-digital-wellness/sources#cite-${num}`} class="text-accent cursor-pointer hover:underline underline-offset-2">
+    <a href={`/sources/#cite-${num}`} class="text-accent cursor-pointer hover:underline underline-offset-2">
       {num}
     </a>
   </sup>
