--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Layout from "../layouts/Layout.astro";
                 </p>
                 <div class="flex flex-col sm:flex-row gap-4 justify-center">
                     <a
-                        href="/harney-digital-wellness/quick-start"
+                        href="/quick-start/"
                         class="btn btn-primary btn-lg"
                     >
                         Start here: Take the 2-Minute Family Assessment
@@ -125,7 +125,7 @@ import Layout from "../layouts/Layout.astro";
                         </p>
                         <div class="card-actions">
                             <a
-                                href="/harney-digital-wellness/screen-time"
+                                href="/screen-time/"
                                 class="guidance-button btn-sm"
                                 >Check Screen Time</a
                             >
@@ -167,7 +167,7 @@ import Layout from "../layouts/Layout.astro";
                         </p>
                         <div class="card-actions">
                             <a
-                                href="/harney-digital-wellness/online-safety"
+                                href="/online-safety/"
                                 class="crisis-button btn-sm"
                                 >Learn About Online Safety</a
                             >
@@ -209,7 +209,7 @@ import Layout from "../layouts/Layout.astro";
                         </p>
                         <div class="card-actions">
                             <a
-                                href="/harney-digital-wellness/online-safety#device-settings"
+                                href="/online-safety/#device-settings"
                                 class="wellness-button btn-sm"
                                 >Setup Parental Controls</a
                             >
@@ -237,7 +237,7 @@ import Layout from "../layouts/Layout.astro";
                 class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto"
             >
                 <a
-                    href="/harney-digital-wellness/mindful-breaks"
+                    href="/mindful-breaks/"
                     class="card bg-flexoki-blue-50 hover:bg-flexoki-blue-100 transition-colors border border-flexoki-blue-200"
                 >
                     <div class="card-body text-center">
@@ -264,7 +264,7 @@ import Layout from "../layouts/Layout.astro";
                 </a>
 
                 <a
-                    href="/harney-digital-wellness/resources"
+                    href="/resources/"
                     class="card bg-flexoki-magenta-50 hover:bg-flexoki-magenta-100 transition-colors border border-flexoki-magenta-200"
                 >
                     <div class="card-body text-center">
@@ -291,7 +291,7 @@ import Layout from "../layouts/Layout.astro";
                 </a>
 
                 <a
-                    href="/harney-digital-wellness/get-help"
+                    href="/get-help/"
                     class="card bg-flexoki-paper-100 hover:bg-flexoki-paper-200 transition-colors border border-flexoki-paper-300"
                 >
                     <div class="card-body text-center">
