--- a/src/pages/quick-start.astro
+++ b/src/pages/quick-start.astro
@@ -56,7 +56,7 @@ import AssessmentQuiz from "../components/AssessmentQuiz.astro";
                             After exploring the Healthy Digital Habits Toolkit with your child, please take 2–3 minutes to complete our Parent Feedback Survey.
                             Your anonymous input helps us understand what works—and how we can make it even better.
                         </p>
-                        <a href="/harney-digital-wellness/survey" class="btn btn-success">
+                        <a href="/survey/" class="btn btn-success">
                             Take the Survey Now
                         </a>
                     </div>
@@ -110,7 +110,7 @@ import AssessmentQuiz from "../components/AssessmentQuiz.astro";
                                 </p>
                                 <div class="card-actions">
                                     <a
-                                        href="/harney-digital-wellness/screen-time"
+                                        href="/screen-time/"
                                         class="guidance-button"
                                         >Get Screen Time Guide</a
                                     >
@@ -151,7 +151,7 @@ import AssessmentQuiz from "../components/AssessmentQuiz.astro";
                                 </p>
                                 <div class="card-actions">
                                     <a
-                                        href="/harney-digital-wellness/online-safety"
+                                        href="/online-safety/"
                                         class="crisis-button"
                                         >Learn About Online Safety</a
                                     >
@@ -194,7 +194,7 @@ import AssessmentQuiz from "../components/AssessmentQuiz.astro";
                                 </p>
                                 <div class="card-actions">
                                     <a
-                                        href="/harney-digital-wellness/mindful-breaks"
+                                        href="/mindful-breaks/"
                                         class="wellness-button"
                                         >Get Mindful Breaks Guide</a
                                     >
@@ -309,7 +309,7 @@ import AssessmentQuiz from "../components/AssessmentQuiz.astro";
                                             Center and other local emergency contacts
                                         </p>
                                         <a
-                                            href="/harney-digital-wellness/get-help"
+                                            href="/get-help/"
                                             class="crisis-button btn-sm"
                                             >Find Harney County Support
                                             Resources</a
